--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "bootstrap": "^5.2.3",
     "eslint": "^8.39.0",
     "gsap": "^3.11.5",
-    "react-bootstrap": "^2.7.3",
+    "i18next": "^23.5.1",
+    "i18next-browser-languagedetector": "^7.1.0",
+    "i18next-http-backend": "^2.2.2",
     "react": "^18.1.0",
+    "react-bootstrap": "^2.7.3",
     "react-dom": "^18.1.0",
+    "react-i18next": "^13.3.0",
     "react-rough": "^2.3.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
